# influencer_inviteai

./: .gitignore  pyproject.toml  test_youtube.py  verify_db.py  verify_logitech_db.py  verify_rag.py
INMA_influencers/: .env.example  .gitignore  back.py  back_endpoints_inbox.py  back_endpoints_stats.py  inma_email_agent.py  inmatokenserver.py  main.py  matching_engine.py
inma-frontend/: package-lock.json  package.json
inma-frontend/src/: App.jsx
inma-frontend/src/lib/: api.js
inma-frontend/src/pages/: Campaigns.jsx  Dashboard.jsx  Inbox.jsx  Influencers.jsx  Matching.jsx
src/influencer_inviteai/: __init__.py  brand_matcher.py  collector.py  product_collector.py  rag_engine.py  run_indexing.py  test.py
